fix: Fix page title vertical alignment

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -33,6 +33,7 @@
 			margin-bottom: 0px;
 			margin-right: var(--margin-sm);
 			max-width: 500px;
+			line-height: var(--input-height);
 		}
 		.indicator-pill {
 			margin-top: 2px;
